yaml/Mysql_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: db
spec:
  ports:
  - port: 3306
    name: db
  clusterIP: None
  selector:
    app: db
