yaml/Nginx_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
  - nodePort: 30000
    port: 80
    targetPort: 80
  type: LoadBalancer
