yaml/ingress copy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "k8s-ip"
    networking.gke.io/v1beta1.FrontendConfig: "https-redirect"
    networking.gke.io/managed-certificates: managed-cert
spec:
  rules:
  - host: www.wayrkks.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-svc
            port: 
              number: 80
